src/msg/snapshots/tmi__msg__user_notice__tests__parse_submysterygift_ananonymousgifter.snap
---
source: src/msg/user_notice.rs
expression: "f(\"@badge-info=;badges=;color=;display-name=AnAnonymousGifter;emotes=;flags=;id=8db97752-3dee-460b-9001-e925d0e2ba5b;login=ananonymousgifter;mod=0;msg-id=submysterygift;msg-param-mass-gift-count=10;msg-param-origin-id=13\\\\s33\\\\sed\\\\sc0\\\\sef\\\\sa0\\\\s7b\\\\s9b\\\\s48\\\\s59\\\\scb\\\\scc\\\\se4\\\\s39\\\\s7b\\\\s90\\\\sf9\\\\s54\\\\s75\\\\s66;msg-param-sub-plan=1000;room-id=71092938;subscriber=0;system-msg=An\\\\sanonymous\\\\suser\\\\sis\\\\sgifting\\\\s10\\\\sTier\\\\s1\\\\sSubs\\\\sto\\\\sxQcOW's\\\\scommunity!;tmi-sent-ts=1585447099603;user-id=274598607;user-type= :tmi.twitch.tv USERNOTICE #xqcow\")"
---
UserNotice {
    channel: Channel(
        "#xqcow",
    ),
    channel_id: "71092938",
    sender: None,
    text: None,
    system_message: Some(
        "An\\sanonymous\\suser\\sis\\sgifting\\s10\\sTier\\s1\\sSubs\\sto\\sxQcOW's\\scommunity!",
    ),
    event: AnonSubMysteryGift(
        AnonSubMysteryGift {
            count: 10,
            sub_plan: "1000",
        },
    ),
    event_id: "submysterygift",
    badges: [],
    emotes: "",
    color: None,
    message_id: "8db97752-3dee-460b-9001-e925d0e2ba5b",
    timestamp: 2020-03-29T01:58:19.603Z,
}
