src/msg/snapshots/tmi__msg__user_notice__tests__parse_user_notice_announcement.snap
---
source: src/msg/user_notice.rs
expression: "f(\"@emotes=;login=pajbot;vip=0;tmi-sent-ts=1695554663565;flags=;mod=1;subscriber=1;id=bb1bec25-8f26-4ba3-a084-a6a2ca332f00;badge-info=subscriber/93;system-msg=;user-id=82008718;user-type=mod;room-id=11148817;badges=moderator/1,subscriber/3072;msg-param-color=PRIMARY;msg-id=announcement;color=#2E8B57;display-name=pajbot :tmi.twitch.tv USERNOTICE #pajlada :$ping xd\")"
---
UserNotice {
    channel: Channel(
        "#pajlada",
    ),
    channel_id: "11148817",
    sender: Some(
        User {
            id: "82008718",
            login: "pajbot",
            name: "pajbot",
        },
    ),
    text: Some(
        "$ping xd",
    ),
    system_message: None,
    event: Announcement(
        Announcement {
            highlight_color: "PRIMARY",
        },
    ),
    event_id: "announcement",
    badges: [
        Moderator,
        Subscriber(
            Subscriber {
                version: "3072",
                months: "93",
                months_n: 93,
            },
        ),
    ],
    emotes: "",
    color: Some(
        "#2E8B57",
    ),
    message_id: "bb1bec25-8f26-4ba3-a084-a6a2ca332f00",
    timestamp: 2023-09-24T11:24:23.565Z,
}
